<resources>
    <string name="app_name">DBST</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_hint">Type</string>
    <string name="amount_expensed_hint">Amount Expensed</string>
    <string name="appearance_section_name">Appearance</string>
    <string name="change_app_colors_theme">Change App Colors (Theme)</string>
    <string name="security_section_name">Security</string>
    <string name="Info_fragment_nav_title">Dashboard</string>
    <string name="usdt_fragment_nav_title">USDT</string>
    <string name="validity_fragment_nav_title">Validity</string>
    <string name="entry_fragment_nav_title">Entry</string>
    <string name="databases_fragment_toolbar_title">Databases</string>
    <string name="yearlyview_fragment_toolbar_title">Yearly View</string>
    <string name="exportdata_fragment_toolbar_title">Export Data</string>
    <string name="settings_activity_toolbar_title">Settings</string>
    <string name="select_table">Select Table</string>
    <string name="import_csv_button">Import CSV</string>
    <string name="delete_table_data">Delete Table Data</string>
    <string name="select_table_to_clear">Select Table to Clear</string>
    <string name="databases_title_section">Databases</string>
    <string name="fingerprint_authentication_delay">Fingerprint Authentication Delay</string>
    <string name="enable_fingerprint_authentication">Enable Fingerprint Authentication</string>
    <string name="dynamic_theme">Dynamic Theme</string>
    <string name="usdt_amount">USDT Amount</string>
    <string name="sell_type">SELL</string>
    <string name="buy_type">BUY</string>
    <string name="save_button_text">Save</string>
    <string name="expense_button_text">Expense</string>
    <string name="rate_button_text">Rate</string>
    <string name="amount_exchanged_field">Amount Exchanged</string>
    <string name="close_button_text">Close</string>
    <string name="date_input_field">Date</string>
    <string name="person_hint">Person</string>
    <string name="paid_by_wish">Paid By Whish</string>
    <string name="validity_hint">Validity</string>
    <string name="amount_hint">Amount</string>
    <string name="app_version_text">DBST v1.0.0</string>
    <string name="select_delay_time_hint">Select delay time</string>
    <string name="search_string">Search</string>
    <string name="paid">Paid?</string>
    <string name="undo_last_entry_save">Undo last entry save</string>
    <string name="theme_settings">Theme Settings</string>
    <string name="theme_mode">Theme Mode</string>
    <string name="system_theme">System</string>
    <string name="light_theme">Light</string>
    <string name="dark_theme">Dark</string>
    <string name="use_dynamic_colors">Use dynamic colors (Material You)</string>
    <string name="dynamic_colors_not_supported">Dynamic colors not supported on this device</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="light_mode">Light Mode</string>
    <string name="income_button_text">Income</string>
    <string name="save_and_send"><![CDATA[Save & Send]]></string>
    <string name="given_values_title">Given Values</string>
    <string name="cash_and_banking"><![CDATA[Cash & Banking]]></string>
</resources>